// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`barStack > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1s3oplf3"
    >
      <div
        class="styles__1s3oplf1"
        style="--_1s3oplf0: 10.638297872340425%;"
      >
        <div
          class="styles__1s3oplf2"
        >
          Hello
        </div>
      </div>
      <div
        class="styles__1s3oplf1"
        style="--_1s3oplf0: 22.340425531914892%;"
      >
        <div
          class="styles__1s3oplf2"
        />
      </div>
      <div
        class="styles__1s3oplf1"
        style="--_1s3oplf0: 22.340425531914892%;"
      >
        <div
          class="styles__1s3oplf2"
        >
          Encore
        </div>
      </div>
      <div
        class="styles__1s3oplf1"
        style="--_1s3oplf0: 22.340425531914892%;"
      >
        <div
          class="styles__1s3oplf2"
        >
          Next
        </div>
      </div>
      <div
        class="styles__1s3oplf1"
        style="--_1s3oplf0: 22.340425531914892%;"
      >
        <div
          class="styles__1s3oplf2"
        >
          Bye bye
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with event handlers 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1s3oplf3"
    >
      <div
        class="styles__1s3oplf1"
        style="--_1s3oplf0: 100%;"
      >
        <div
          class="styles__1s3oplf2"
        >
          Hello
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`barStack > should render correctly with total 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1s3oplf3"
    >
      <div
        class="styles__1s3oplf1"
        style="--_1s3oplf0: 2%;"
      >
        <div
          class="styles__1s3oplf2"
        >
          Hello
        </div>
      </div>
      <div
        class="styles__1s3oplf1"
        style="--_1s3oplf0: 4.2%;"
      >
        <div
          class="styles__1s3oplf2"
        />
      </div>
      <div
        class="styles__1s3oplf1"
        style="--_1s3oplf0: 4.2%;"
      >
        <div
          class="styles__1s3oplf2"
        >
          Encore
        </div>
      </div>
      <div
        class="styles__1s3oplf1"
        style="--_1s3oplf0: 4.2%;"
      >
        <div
          class="styles__1s3oplf2"
        >
          Next
        </div>
      </div>
      <div
        class="styles__1s3oplf1"
        style="--_1s3oplf0: 4.2%;"
      >
        <div
          class="styles__1s3oplf2"
        >
          Bye bye
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
